--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <title>Color Flipper || Hex</title>
 </head>
 <body>
+    <!-- This is the container That hold all of the application -->
     <div id="root"></div>
 </body>
 </html>
